# todolistAPI-

./: README.md  pyproject.toml
core/: settings.py  urls.py
todo/: models.py
todo/migrations/: 0001_initial.py
