[tool.poetry]
name = "todoapi"
version = "0.1.0"
description = ""
authors = ["emma0620 <emmawang0620@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
